--- a/movie-search/src/sass/base/_base.scss
+++ b/movie-search/src/sass/base/_base.scss
@@ -16,6 +16,13 @@
   height: 100%;
 }
 
+.swiper-pagination, .swiper-button-next, .swiper-button-prev {
+
+  @media screen and (max-width: $mobile-max-width) {
+    display: none;
+  }
+}
+
 .swiper-slide {
   text-align: center;
   font-size: 18px;
