refactor: clean up code

--- a/movie-search/src/sass/components/_card.scss
+++ b/movie-search/src/sass/components/_card.scss
@@ -1,13 +1,10 @@
 .card {
-  //width: 25%;
-  //margin: 0 10px;
-
   &__rating-box {
     display: flex;
     align-items: flex-start;
   }
 
-  &__rating {
-
+  &-body {
+    text-align: center;
   }
 }
