feat: add info alert and modal window

--- a/movie-search/src/sass/components/_alert.scss
+++ b/movie-search/src/sass/components/_alert.scss
@@ -5,4 +5,11 @@
   &_hidden {
     opacity: 0;
   }
+
+  &_info {
+    position: fixed;
+    bottom: 60px;
+    right: 10px;
+    z-index: 1001;
+  }
 }
