--- a/movie-search/src/sass/components/_card.scss
+++ b/movie-search/src/sass/components/_card.scss
@@ -9,7 +9,19 @@
     text-align: center;
   }
 
+  &-text {
+
+    &_right {
+      text-align: right;
+    }
+  }
+
   &:hover {
     box-shadow: 0 0 20px 0 $color-primary;
+  }
+
+  &__row {
+    display: flex;
+    justify-content: space-between;
   }
 }
