fix: some fixes

--- a/movie-search/src/sass/components/_swiper.scss
+++ b/movie-search/src/sass/components/_swiper.scss
@@ -1,6 +1,6 @@
 .swiper-container {
   width: 95%;
-  height: 100%;
+  height: 500px;
 }
 
 .swiper-pagination, .swiper-button-next, .swiper-button-prev {
