fix: fix images and title

--- a/movie-search/src/sass/components/_card.scss
+++ b/movie-search/src/sass/components/_card.scss
@@ -11,6 +11,21 @@
     text-align: center;
   }
 
+  &-img-container {
+    position: relative;
+    padding-bottom: 160%; /* ratio of image height to width */
+    height: 0;
+    overflow: hidden;
+
+    & img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   &-text {
 
     &_right {
